updating package.json

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "events": "^1.0.2",
     "mouse-event-offset": "^1.0.2",
     "mouse-position": "^1.0.0",
-    "tape": "^3.0.1"
+    "tape": "^3.0.1",
+    "touch-position": "^1.0.1"
   },
   "scripts": {
     "test": "node test.js"
